[gd_scene load_steps=47 format=3 uid="uid://c15x2io4mu5hh"]

[ext_resource type="PackedScene" uid="uid://indqiyswokfh" path="res://Enemy/enemy.tscn" id="1_d11op"]
[ext_resource type="Script" uid="uid://cnkwlscsedkg0" path="res://Enemy/goblin.gd" id="2_kd538"]
[ext_resource type="Texture2D" uid="uid://bbv1wqqhn1g2p" path="res://Assets/Mod/Orc.png" id="2_ohj34"]
[ext_resource type="Script" uid="uid://ikyvo503wanu" path="res://Classes/Hurtbox.gd" id="4_8x8dd"]
[ext_resource type="Script" uid="uid://jc2u7rl0oo75" path="res://Classes/Hitbox.gd" id="5_omsqc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_hqnwv"]
atlas = ExtResource("2_ohj34")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7ep2"]
atlas = ExtResource("2_ohj34")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vupnr"]
atlas = ExtResource("2_ohj34")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4swf"]
atlas = ExtResource("2_ohj34")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulevo"]
atlas = ExtResource("2_ohj34")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_744v0"]
atlas = ExtResource("2_ohj34")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2tuh"]
atlas = ExtResource("2_ohj34")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iil3f"]
atlas = ExtResource("2_ohj34")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0ceo"]
atlas = ExtResource("2_ohj34")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7hcj"]
atlas = ExtResource("2_ohj34")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qtur"]
atlas = ExtResource("2_ohj34")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjyfn"]
atlas = ExtResource("2_ohj34")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd538"]
atlas = ExtResource("2_ohj34")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x8dd"]
atlas = ExtResource("2_ohj34")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_omsqc"]
atlas = ExtResource("2_ohj34")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq0f6"]
atlas = ExtResource("2_ohj34")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnmy7"]
atlas = ExtResource("2_ohj34")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn2b1"]
atlas = ExtResource("2_ohj34")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cmsi"]
atlas = ExtResource("2_ohj34")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pme0f"]
atlas = ExtResource("2_ohj34")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_61llm"]
atlas = ExtResource("2_ohj34")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_riluc"]
atlas = ExtResource("2_ohj34")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8wsu"]
atlas = ExtResource("2_ohj34")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni0k4"]
atlas = ExtResource("2_ohj34")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_egkyd"]
atlas = ExtResource("2_ohj34")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmpxm"]
atlas = ExtResource("2_ohj34")
region = Rect2(700, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oiju7"]
atlas = ExtResource("2_ohj34")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0sdm"]
atlas = ExtResource("2_ohj34")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylhl2"]
atlas = ExtResource("2_ohj34")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8spdw"]
atlas = ExtResource("2_ohj34")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gahy4"]
atlas = ExtResource("2_ohj34")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcv68"]
atlas = ExtResource("2_ohj34")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kks1"]
atlas = ExtResource("2_ohj34")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ukiw"]
atlas = ExtResource("2_ohj34")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_hqnwv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqnwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7ep2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vupnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4swf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulevo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_744v0")
}],
"loop": true,
"name": &"attack1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2tuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iil3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0ceo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7hcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qtur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjyfn")
}],
"loop": false,
"name": &"attack2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd538")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x8dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omsqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq0f6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnmy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn2b1")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cmsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pme0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_61llm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riluc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8wsu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni0k4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egkyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmpxm")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oiju7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0sdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylhl2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8spdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gahy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcv68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kks1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ukiw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omsqc"]
size = Vector2(11, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iil3f"]
size = Vector2(11, 13.5)

[sub_resource type="Animation" id="Animation_8l4an"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character/Hitbox/CollisionPolygon2D1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character/Hitbox/CollisionPolygon2D2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bt0jq"]
resource_name = "attack1"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character/Hitbox/CollisionPolygon2D1:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.562753),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_tqv47"]
resource_name = "attack2"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack2"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character/Hitbox/CollisionPolygon2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.567563),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_47lx5"]
_data = {
&"RESET": SubResource("Animation_8l4an"),
&"attack1": SubResource("Animation_bt0jq"),
&"attack2": SubResource("Animation_tqv47")
}

[node name="Goblin" instance=ExtResource("1_d11op")]
script = ExtResource("2_kd538")

[node name="AnimatedSprite2D" parent="Character" index="0"]
sprite_frames = SubResource("SpriteFrames_hqnwv")
animation = &"attack1"

[node name="FloorRayCast" type="RayCast2D" parent="Character" index="1"]
position = Vector2(4, 6)
target_position = Vector2(0, 2)

[node name="WallRayCast" type="RayCast2D" parent="Character" index="2"]
position = Vector2(4, -3)
target_position = Vector2(7, 0)

[node name="PlayerRayCast" type="RayCast2D" parent="Character" index="3"]
position = Vector2(0, -3)
target_position = Vector2(40, 0)
collision_mask = 2

[node name="AttackRayCast" type="RayCast2D" parent="Character" index="4"]
target_position = Vector2(22, 0)
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="Character" index="5"]
collision_layer = 0
collision_mask = 2
script = ExtResource("5_omsqc")
metadata/_custom_type_script = "uid://jc2u7rl0oo75"

[node name="CollisionPolygon2D1" type="CollisionPolygon2D" parent="Character/Hitbox" index="0"]
polygon = PackedVector2Array(5, -14, 15, -11, 22, -2, 24, 6, 20, 12, 14, 12, 5, 13)
disabled = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Character/Hitbox" index="1"]
polygon = PackedVector2Array(12, -14, 24, -8, 24, 1, 17, 11, 11, 16, 3, 8)
disabled = true

[node name="Hurtbox" type="Area2D" parent="Character" index="6"]
collision_layer = 4
collision_mask = 0
script = ExtResource("4_8x8dd")
metadata/_custom_type_script = "uid://ikyvo503wanu"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Character/Hurtbox" index="0"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_omsqc")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0.5, -0.25)
shape = SubResource("RectangleShape2D_iil3f")

[node name="seePlayerTimer" type="Timer" parent="." index="3"]
wait_time = 2.0
one_shot = true

[node name="attackIntervalTimer" type="Timer" parent="." index="4"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
&"": SubResource("AnimationLibrary_47lx5")
}

[connection signal="hurt" from="Character/Hurtbox" to="." method="_on_hurtbox_hurt"]
